[gd_scene load_steps=2 format=3 uid="uid://m2peow0rpk87"]

[ext_resource type="Script" path="res://scenes/ui/player_ui.gd" id="1_oe7fk"]

[node name="PlayerUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6
script = ExtResource("1_oe7fk")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TopBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RoleText" type="Label" parent="VBoxContainer/TopBox"]
layout_mode = 2
text = "Role: "

[node name="BottomBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
